--- a/.github/workflows/odoo-quality.yml
+++ b/.github/workflows/odoo-quality.yml
@@ -54,10 +54,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ inputs.python-version }}
-          cache: 'pip'
-          cache-dependency-path: |
-            **/requirements*.txt
-            **/dev-requirements*.txt
+
+      - name: Cache pip packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ inputs.odoo-version }}-${{ hashFiles('**/requirements*.txt', '**/dev-requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ inputs.odoo-version }}-
+            ${{ runner.os }}-pip-
 
       - name: Install quality tools
         run: |
