fix: add pull-requests write permission for PR comments

--- a/.github/workflows/odoo-quality.yml
+++ b/.github/workflows/odoo-quality.yml
@@ -44,6 +44,9 @@ jobs:
   quality:
     name: Quality Checks (Odoo ${{ inputs.odoo-version }})
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     outputs:
       all-passed: ${{ steps.summary.outputs.all-passed }}
 
